 
Changelog for Structure Synth:
------------
23 Oct 10 [MHC] OBJ exporter is done. Supports Sphere (with adjustable resolution), Box, Mesh, Grid, Line, and Dots. Group by tag or color. No .mat file support.
[2h] 

15 Oct 10 [MHC] Removed old anti-alias code. Added stratified sampling (for AO). No visible effect :-(
[2h]

07 Oct 10 [MHC] More Obj export: added settings dialog.
[1h]

05 Oct 10 [MHC] Added 'Raytrace preview' button. Fixed bug: random seeds are no longer synchronized between threads.
[3h]

04 Oct 10 [MHC] OBJ exporter: now prunes geometry a bit, added normals, groups according to tagging.
[2h]

03 Oct 10 [MHC] Started implementing an OBJ exporter.
[1h]

22 Sep 10 [MHC] Added 'set raytracer::light [x,y,z]' command
				Added 'set perspective-angle <angle>' command (still a bit fuzzy)

21 Sep 10 [MHC] Proper sorting of transparent OpenGL objects. 
[2h]			Changed name to 'Raytracer::samples' and 'Raytracer::ambient-occlusion-samples'
				Added the context menu 'Toggle Object Depth'


17 Sep 10 [MHC] Tried out different lens sampling techniques (uniform density disc, random angle+radius, gaussian radius). Random angle+radius turned out to look best
[2h]			Fixed the RayID multi-threading issues.

15 Sep 10 [MHC] Fixed applying AA after AO.
[1h]

14 Sep 10 [MHC] Added multithreaded AA + AO support.
[1h]

13 Sep 10 [MHC] Trying out different post-processing Depth-of-field techniques, using the z-buffer. Too many artifacts.
[2h]

8  Sep 10 [MHC] The raytracer multithreading scheduling is working. Missing anti-alias + AO. The RayID tagging is still not thread-safe.
[2h]

6  Sep 10 [MHC] Fixed skewed box ray-interception test. Begun multithreading code for raytracer.
[3h]

4  Sep 10 [MHC] Fixed Mesh bounding-box error. Added support for raytracing of triangle primitive.
[1h]

1  Sep 10 [MHC] PreviewWindow for raytracer. Fixed raytracer sizing problems.
[2h]

31 Aug 10 [MHC] Context menu with command help in text edit area.
[2h]
